# Sternenklar

./: CMakeLists.txt  README.md  main.cpp
Admin/: AdminConfig.cpp  AdminConfig.h  CMakeLists.txt  CSAdmin.cpp  CSAdmin.h
Graphgen/: CMakeLists.txt  Graph.hpp  Graphgen.cpp  Graphgen.h  Instruction.hpp  Node.hpp  Value.hpp
Graphgen/GenFilter/: CMakeLists.txt  DebugInstructionFilter.cpp  DebugInstructionFilter.h  GenFilter.cpp  GenFilter.h
Runner/: CMakeLists.txt  Runner.cpp  Runner.h  RunnerConfig.cpp  RunnerConfig.h
Similarity/: CMakeLists.txt  Similarity.cpp  Similarity.h
Similarity/GraphSimilarity/: CMakeLists.txt  GSSM.cpp  GSSM.h  GraphSimilarity.hpp
Similarity/OutputAnalyzer/: CMakeLists.txt  OutputAnalyzer.cpp  OutputAnalyzer.h
Similarity/TextSimilarity/: CMakeLists.txt  EditDistanceMethod.hpp  SimHashMethod.hpp  TextSimilarity.hpp  TypeSimilarity.cpp  TypeSimilarity.h
Similarity/utils/: CMakeLists.txt  EditDistance.hpp  KuhnMunkres.hpp  picosha2.hpp
include/: CodeSimilariry.h
utils/: ThreadPool.h  cxxopts.hpp  magic_enum.hpp
